文章阅读者功能
